[package]
name = "suprarust"
version = "0.1.0"
edition = "2021"

[dependencies]
ext-php-rs = "0.12" 
mysql = "*" 
log = "0.4.22"
env_logger = "0.11.6"
dotenv = "0.15.0" 
chrono = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_php = "0.5.0"  # O la versión más reciente
serde = { version = "1.0.217", features = ["derive"] }

[lib]
crate-type = ["cdylib"]