[package]
name = "suprarust"
version = "0.1.1"
edition = "2021"

[dependencies]
ext-php-rs = "0.12.0"  # Actualizado
mysql = "25.0.1" # Añadida la dependencia mysql síncrona
lazy_static = "1.5.0" # Actualizado
once_cell = "1.20.2"
dotenv = "0.15.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[profile.dev]
debug = true